<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8EBEB"
    tools:context=".SettingsScreen">

    <TextView
        android:id="@+id/thresholdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:text="Enable Threshold Alerts:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/thresholdSelectGroup"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="41dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/thresholdText"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/onButton"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="On" />

        <RadioButton
            android:id="@+id/offButton"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="Off" />
    </RadioGroup>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:backgroundTint="#1FBF43"
        android:text="Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minTempLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thresholdSelectGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/minTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/minTempText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maxTempLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minTempLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/maxTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maxTempText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minHumLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxTempLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/minHum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/minHumText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maxHumLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minHumLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/maxHum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maxHumText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minPresLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxHumLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/minPres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/minPresText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maxPresLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minPresLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/maxPres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maxPresText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeIntervalLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPresLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/timeIntervalText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ipLayout"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintEnd_toStartOf="@+id/portLayout"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeIntervalLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enteredIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="IP Address" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/portLayout"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeIntervalLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enteredPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Port" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>